Add new method for user service